# step-servo-motor-control

./: CMakeLists.txt  README.md  platformio.ini
src/: adc.c  adc.h  button.c  button.h  gpio.c  gpio.h  main.c  systemclock.c  systemclock.h  timer.c  timer.h  variables.h
